--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -34,10 +34,21 @@
         
     </RelativeLayout>
 
+    <com.google.android.material.progressindicator.LinearProgressIndicator
+        android:layout_width="match_parent"
+        android:layout_height="15dp"
+        android:id="@+id/timer"
+        android:indeterminate="false"
+        android:maxHeight="15dp"
+        android:minHeight="15dp"
+        android:progress="10"
+        app:indicatorColor="#FFFF33"
+        android:max="20"/>
+
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="250dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="30dp"
         android:layout_marginRight="20dp"
         android:layout_marginLeft="20dp"
         app:cardBackgroundColor="#0020C2"
