--- a/app/src/main/res/layout/activity_time_out.xml
+++ b/app/src/main/res/layout/activity_time_out.xml
@@ -33,6 +33,7 @@
             android:layout_marginTop="20dp"/>
 
         <LinearLayout
+            android:id="@+id/btntryagain"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginTop="20dp"
